[gd_scene load_steps=24 format=3 uid="uid://c8ypxt86rto06"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_kvxnh"]
[ext_resource type="Texture2D" uid="uid://bryxby4iiffby" path="res://assets/bg.jpg" id="1_th7bm"]
[ext_resource type="PackedScene" uid="uid://ccnmqkb7nk2uj" path="res://spaceship.tscn" id="2_fs8j4"]
[ext_resource type="Texture2D" uid="uid://w1bcwrwgdwkb" path="res://assets/ui/pack 2/PNG/Clouds/Cloud_02.png" id="5_eechq"]
[ext_resource type="Texture2D" uid="uid://dlbugwuvonpvh" path="res://assets/ui/pack 2/PNG/Buttons/BTNs/Hangar_BTN.png" id="5_hty2m"]
[ext_resource type="Texture2D" uid="uid://bsjmrgyhx8gfj" path="res://assets/ui/pack 2/PNG/Buttons/BTNs_Active/Hangar_BTN.png" id="6_2v8kv"]
[ext_resource type="Texture2D" uid="uid://bmopisv71thbn" path="res://assets/ui/pack 2/PNG/Main_UI/Boss_Name_Table.png" id="6_kvffh"]
[ext_resource type="Texture2D" uid="uid://c6weml150rxhw" path="res://assets/ui/pack 2/PNG/Buttons/BTNs/Menu_BTN.png" id="7_rgraj"]
[ext_resource type="Texture2D" uid="uid://dovvmhml4td70" path="res://assets/ui/pack 2/PNG/Buttons/BTNs_Active/Menu_BTN.png" id="8_dw4li"]
[ext_resource type="Texture2D" uid="uid://do71qrnctdgnq" path="res://assets/ui/pack 2/PNG/Buttons/BTNs/Settings_BTN.png" id="10_pwcb5"]
[ext_resource type="Texture2D" uid="uid://dmau6k5r7ys60" path="res://assets/ui/pack 2/PNG/Buttons/BTNs_Active/Settings_BTN.png" id="11_1yv5q"]
[ext_resource type="Texture2D" uid="uid://sjyom2v136ge" path="res://assets/ui/pack 2/PNG/Accept/Window.png" id="12_2oeoa"]
[ext_resource type="Texture2D" uid="uid://clkj8pyxagdhe" path="res://assets/ui/pack 2/PNG/Buttons/BTNs/Replay_BTN.png" id="13_7imlv"]
[ext_resource type="Texture2D" uid="uid://c1mjexelq3nsh" path="res://assets/ui/pack 2/PNG/Buttons/BTNs_Active/Replay_BTN.png" id="14_tfrjp"]
[ext_resource type="Texture2D" uid="uid://ctej0w2fnwheb" path="res://assets/ui/pack 2/PNG/Buttons/BTNs/Forward_BTN.png" id="15_ofund"]
[ext_resource type="Texture2D" uid="uid://xu77lhrgaptl" path="res://assets/ui/pack 2/PNG/Buttons/BTNs_Active/Forward_BTN.png" id="16_4yth5"]
[ext_resource type="Texture2D" uid="uid://do1yig2381ijk" path="res://assets/ui/pack 2/PNG/You_Win/Header.png" id="17_m7s0s"]
[ext_resource type="Texture2D" uid="uid://bix0gpjepxy7k" path="res://assets/ui/pack 2/PNG/You_Lose/Header.png" id="18_vt7mb"]

[sub_resource type="SystemFont" id="SystemFont_1bx28"]
font_names = PackedStringArray("Futura")

[sub_resource type="Animation" id="Animation_ob4cj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_espau"]
resource_name = "fade_to_black"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_er5v2"]
resource_name = "fade_to_normal"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4yxrl"]
_data = {
"RESET": SubResource("Animation_ob4cj"),
"fade_to_black": SubResource("Animation_espau"),
"fade_to_normal": SubResource("Animation_er5v2")
}

[node name="Main" type="Node2D"]
script = ExtResource("1_kvxnh")

[node name="Background" type="ParallaxBackground" parent="."]

[node name="Layer" type="ParallaxLayer" parent="Background"]
motion_mirroring = Vector2(1152, 648)

[node name="Sprite2D" type="Sprite2D" parent="Background/Layer"]
texture = ExtResource("1_th7bm")
centered = false
region_enabled = true
region_rect = Rect2(2.08165e-12, 2.08165e-12, 1152, 648)

[node name="Planets" type="Node2D" parent="."]

[node name="Ship" parent="." instance=ExtResource("2_fs8j4")]
position = Vector2(296, 421)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Cloud02" type="Sprite2D" parent="Control"]
position = Vector2(58, 586)
texture = ExtResource("5_eechq")
region_enabled = true
region_rect = Rect2(266.5, -14, 497, 161)

[node name="Launch" type="TextureButton" parent="Control"]
layout_mode = 2
offset_left = 44.0
offset_top = 563.0
offset_right = 105.0
offset_bottom = 624.0
tooltip_text = "Launch"
texture_normal = ExtResource("5_hty2m")
texture_hover = ExtResource("6_2v8kv")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Control"]
layout_mode = 2
offset_left = 114.0
offset_top = 575.0
offset_right = 219.0
offset_bottom = 611.0
theme_override_fonts/font = SubResource("SystemFont_1bx28")
theme_override_font_sizes/font_size = 25
text = "LAUNCH"

[node name="Settings" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 902.0
offset_top = 20.0
offset_right = 1006.0
offset_bottom = 124.0
tooltip_text = "Settings"
texture_normal = ExtResource("10_pwcb5")
texture_hover = ExtResource("11_1yv5q")
ignore_texture_size = true
stretch_mode = 4

[node name="LevelSelect" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 1022.0
offset_top = 20.0
offset_right = 1126.0
offset_bottom = 124.0
tooltip_text = "Level select"
texture_normal = ExtResource("7_rgraj")
texture_hover = ExtResource("8_dw4li")
ignore_texture_size = true
stretch_mode = 4

[node name="LevelNameTable" type="Sprite2D" parent="Control"]
position = Vector2(310, 32)
scale = Vector2(1.94, 1.94)
texture = ExtResource("6_kvffh")

[node name="LevelName" type="Label" parent="Control"]
layout_mode = 2
offset_left = 58.0
offset_top = 8.0
offset_right = 327.0
offset_bottom = 76.0
theme_override_fonts/font = SubResource("SystemFont_1bx28")
theme_override_font_sizes/font_size = 35
text = "Level Name"

[node name="TransitionScreen" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="TransitionScreen"]
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="TransitionScreen"]
root_node = NodePath("../ColorRect")
libraries = {
"": SubResource("AnimationLibrary_4yxrl")
}

[node name="WinPopup" type="Node2D" parent="."]
visible = false

[node name="Window" type="Sprite2D" parent="WinPopup"]
position = Vector2(601, 324)
scale = Vector2(0.75, 0.75)
texture = ExtResource("12_2oeoa")

[node name="Replay" type="TextureButton" parent="WinPopup"]
offset_left = 382.0
offset_top = 421.0
offset_right = 592.0
offset_bottom = 631.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("13_7imlv")
texture_hover = ExtResource("14_tfrjp")

[node name="Next" type="TextureButton" parent="WinPopup"]
offset_left = 549.0
offset_top = 421.0
offset_right = 759.0
offset_bottom = 631.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("15_ofund")
texture_hover = ExtResource("16_4yth5")

[node name="LevelSelect" type="TextureButton" parent="WinPopup"]
offset_left = 709.0
offset_top = 421.0
offset_right = 919.0
offset_bottom = 631.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("7_rgraj")
texture_hover = ExtResource("8_dw4li")

[node name="Header" type="Sprite2D" parent="WinPopup"]
position = Vector2(588, 89)
scale = Vector2(0.855932, 0.855932)
texture = ExtResource("17_m7s0s")

[node name="LevelName" type="Label" parent="WinPopup"]
offset_left = 313.0
offset_top = 179.0
offset_right = 714.0
offset_bottom = 280.0
theme_override_fonts/font = SubResource("SystemFont_1bx28")
theme_override_font_sizes/font_size = 75
text = "Level Name"

[node name="LosePopup" type="Node2D" parent="."]
visible = false

[node name="Window" type="Sprite2D" parent="LosePopup"]
position = Vector2(601, 324)
scale = Vector2(0.75, 0.75)
texture = ExtResource("12_2oeoa")

[node name="Replay" type="TextureButton" parent="LosePopup"]
offset_left = 478.0
offset_top = 421.0
offset_right = 688.0
offset_bottom = 631.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("13_7imlv")
texture_hover = ExtResource("14_tfrjp")

[node name="LevelSelect" type="TextureButton" parent="LosePopup"]
offset_left = 613.0
offset_top = 421.0
offset_right = 823.0
offset_bottom = 631.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("7_rgraj")
texture_hover = ExtResource("8_dw4li")

[node name="Header" type="Sprite2D" parent="LosePopup"]
position = Vector2(588, 89)
scale = Vector2(0.855932, 0.855932)
texture = ExtResource("18_vt7mb")

[node name="LevelName" type="Label" parent="LosePopup"]
offset_left = 313.0
offset_top = 179.0
offset_right = 714.0
offset_bottom = 280.0
theme_override_fonts/font = SubResource("SystemFont_1bx28")
theme_override_font_sizes/font_size = 75
text = "Level Name"

[connection signal="pressed" from="Control/Launch" to="." method="_on_launch_pressed"]
[connection signal="pressed" from="Control/Settings" to="." method="_on_settings_pressed"]
[connection signal="animation_finished" from="TransitionScreen/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="WinPopup/Replay" to="." method="_on_replay_pressed"]
[connection signal="pressed" from="LosePopup/Replay" to="." method="_on_replay_pressed"]
